Added command_execute_open_file. Removed jmanager_dispatch_draw_messages. Fixed wheel behavior in the editor (only when the editor is in standby state). Replaced scare/unscare_mouse jmouse_hide/show. Renamed ji_mouse -> jmouse. Added command_execute_close_file

--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -135,6 +135,7 @@ THANKFULNESS
     Jorge Ramírez Flores
     Juraj Michalek
     Manuel De Miguel Moreno
+    Manuel Quiñones
     Mateusz Czaplinski
     Nathan Smith (whitedoor)
     Peter Wang (tjaden)
