--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-11-19  David A. Capello  <dacap@users.sourceforge.net>
+
+	* src/commands/cmd_new_frame.c,
+	src/commands/cmd_frame_properties.c,
+	src/commands/cmd_remove_frame.c: Added frame operations.
+
 2007-11-16  David A. Capello  <dacap@users.sourceforge.net>
 
 	* src/raster/cel.c: Renamed "frame" to "cel" to avoid
