--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-11-24  David A. Capello  <dacap@users.sourceforge.net>
+
+	* src/commands/cmd_configure_screen.c: Added the new dialog to
+	select the graphics mode.
+
 2007-11-19  David A. Capello  <dacap@users.sourceforge.net>
 
 	* src/commands/cmd_new_frame.c,
