--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2007-11-28  David A. Capello  <dacap@users.sourceforge.net>
 
+	* src/modules/gui.c (init_module_gui): Better graphics-resolution
+	selection by default.
+
 	* src/widgets/tabs.c: Done (finished the buttons to move the
 	scroll).
 
