--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,10 @@
+2007-12-13  David A. Capello  <dacap@users.sourceforge.net>
+
+	* src/dialogs/scrsaver.c: Removed.
+
 2007-12-11  David A. Capello  <dacap@users.sourceforge.net>
+
+	* src/script/functions.c (NewSprite): Added.
 
 	* src/raster/sprite.c (sprite_set_imgtype): Added convertion of
 	the background color.
