--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,19 @@
 2008-01-06  David A. Capello  <dacap@users.sourceforge.net>
 
+	* src/jinete/jwidget.c (jwidget_free_deferred): Added.
+
+	* src/jinete/jmanager.c: Replaced 'jmanager_poll' with
+	'jmanager_generate_messages' and
+	'jmanager_dispatch_messages'. This fixed a lot of bugs when mix up
+	two foreground windows.
+
+	* src/jinete/jfilesel.c (generate_extensions): Fixed a bug that
+	leaves 'extensions=NULL' when it's should be 'extensions=a empty
+	list'.
+
+	* src/modules/gui.c (load_widget): Fixed the most stupid code I
+	ever write (double loading of the widget from the .jid files).
+
 	* src/modules/rootmenu.c (load_menu_by_id): Added to fix a problem
 	with popup-menus of the new jmenu.c implementation.
 
