--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-01-13  David A. Capello  <dacap@users.sourceforge.net>
+
+	* src/widgets/editor/cursor.c, src/widgets/editor/editor.c: Fixed
+	a lot of bugs in the code that draws/cleans the brush-cursor in
+	the editor.
+
 2008-01-06  David A. Capello  <dacap@users.sourceforge.net>
 
 	* src/jinete/jwidget.c (jwidget_free_deferred): Added.
