--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-02-11  David A. Capello  <dacap@users.sourceforge.net>
+
+	* src/file/gif/lzw.c (LZW_decode): Fixed a bug when loading some
+	broken-GIF (the 'lzw_write_pixel' routine was called with pos < 0).
+
 2008-02-10  David A. Capello  <dacap@users.sourceforge.net>
 
 	* src/widgets/fileview.c: Finished with thumbnails generation.
